style testing for figures

--- a/article/references.bib
+++ b/article/references.bib
@@ -440,6 +440,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{alibert13,
+   author = {{Alibert}, Y. and {Carron}, F. and {Fortier}, A. and {Pfyffer}, S. and 
+	{Benz}, W. and {Mordasini}, C. and {Swoboda}, D.},
+    title = "{Theoretical models of planetary system formation: mass vs. semi-major axis}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1307.4864},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: formation, planets and satellites: composition, planetary systems},
+     year = 2013,
+    month = oct,
+   volume = 558,
+      eid = {A109},
+    pages = {A109},
+      doi = {10.1051/0004-6361/201321690},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2013A%26A...558A.109A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{allard03,
    author = {{Allard}, F. and {Guillot}, T. and {Ludwig}, H.-G. and {Hauschildt}, P.~H. and 
 	{Schweitzer}, A. and {Alexander}, D.~R. and {Ferguson}, J.~W.
@@ -1106,6 +1125,27 @@ archivePrefix = "arXiv",
 
 %%% BBB
 
+@ARTICLE{bacciotti18,
+   author = {{Bacciotti}, F. and {Girart}, J.~M. and {Padovani}, M. and {Podio}, L. and 
+	{Paladino}, R. and {Testi}, L. and {Bianchi}, E. and {Galli}, D. and 
+	{Codella}, C. and {Coffey}, D. and {Favre}, C. and {Fedele}, D.
+	},
+    title = "{ALMA Observations of Polarized Emission toward the CW Tau and DG Tau Protoplanetary Disks: Constraints on Dust Grain Growth and Settling}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1809.02559},
+ primaryClass = "astro-ph.SR",
+ keywords = {ISM: jets and outflows, polarization, protoplanetary disks},
+     year = 2018,
+    month = oct,
+   volume = 865,
+      eid = {L12},
+    pages = {L12},
+      doi = {10.3847/2041-8213/aadf87},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...865L..12B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{bai13,
    author = {{Bai}, X.-N. and {Stone}, J.~M.},
     title = "{Wind-driven Accretion in Protoplanetary Disks. I. Suppression of the Magnetorotational Instability and Launching of the Magnetocentrifugal Wind}",
@@ -1349,6 +1389,25 @@ archivePrefix = "arXiv",
    volume = 295,
     pages = {L1-L4},
    adsurl = {http://adsabs.harvard.edu/abs/1995A%26A...295L...1B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{baruteau11,
+   author = {{Baruteau}, C. and {Fromang}, S. and {Nelson}, R.~P. and {Masset}, F.
+	},
+    title = "{Corotation torques experienced by planets embedded in weakly magnetized turbulent discs}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1107.2774},
+ primaryClass = "astro-ph.EP",
+ keywords = {accretion, accretion disks, magnetohydrodynamics (MHD), turbulence, methods: numerical, planet-disk interactions, protoplanetary disks},
+     year = 2011,
+    month = sep,
+   volume = 533,
+      eid = {A84},
+    pages = {A84},
+      doi = {10.1051/0004-6361/201117227},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2011A%26A...533A..84B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -2243,6 +2302,21 @@ archivePrefix = "arXiv",
     pages = {1100-1117},
       doi = {10.1088/0004-637X/718/2/1100},
    adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...718.1100B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{boudet05,
+   author = {{Boudet}, N. and {Mutschke}, H. and {Nayral}, C. and {J{\"a}ger}, C. and 
+	{Bernard}, J.-P. and {Henning}, T. and {Meny}, C.},
+    title = "{Temperature Dependence of the Submillimeter Absorption Coefficient of Amorphous Silicate Grains}",
+  journal = {\apj},
+ keywords = {ISM: Dust, Extinction, Infrared: ISM, ISM: Molecules, Methods: Laboratory, Molecular Processes},
+     year = 2005,
+    month = nov,
+   volume = 633,
+    pages = {272-281},
+      doi = {10.1086/432966},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...633..272B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -3578,6 +3652,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{cleeves13,
+   author = {{Cleeves}, L.~I. and {Adams}, F.~C. and {Bergin}, E.~A. and 
+	{Visser}, R.},
+    title = "{Radionuclide Ionization in Protoplanetary Disks: Calculations of Decay Product Radiative Transfer}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1309.0018},
+ primaryClass = "astro-ph.SR",
+ keywords = {accretion, accretion disks, circumstellar matter, radiative transfer, stars: pre-main sequence},
+     year = 2013,
+    month = nov,
+   volume = 777,
+      eid = {28},
+    pages = {28},
+      doi = {10.1088/0004-637X/777/1/28},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...777...28C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{cleeves16,
    author = {{Cleeves}, L.~I. and {{\"O}berg}, K.~I. and {Wilner}, D.~J. and 
 	{Huang}, J. and {Loomis}, R.~A. and {Andrews}, S.~M. and {Czekala}, I.
@@ -4018,6 +4111,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{czekala15,
+   author = {{Czekala}, I. and {Andrews}, S.~M. and {Jensen}, E.~L.~N. and 
+	{Stassun}, K.~G. and {Torres}, G. and {Wilner}, D.~J.},
+    title = "{A Disk-based Dynamical Mass Estimate for the Young Binary AK Sco}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1505.01850},
+ primaryClass = "astro-ph.SR",
+ keywords = {protoplanetary disks, stars: fundamental parameters, stars: individual: AK Sco, stars: pre-main sequence},
+     year = 2015,
+    month = jun,
+   volume = 806,
+      eid = {154},
+    pages = {154},
+      doi = {10.1088/0004-637X/806/2/154},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...806..154C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{czekala16,
    author = {{Czekala}, I. and {Andrews}, S.~M. and {Torres}, G. and {Jensen}, E.~L.~N. and 
 	{Stassun}, K.~G. and {Wilner}, D.~J. and {Latham}, D.~W.},
@@ -4055,6 +4167,20 @@ archivePrefix = "arXiv",
     pages = {1383-1390},
       doi = {10.1086/663724},
    adsurl = {http://adsabs.harvard.edu/abs/2011PASP..123.1383D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{dalessio97,
+   author = {{D'Alessio}, P. and {Calvet}, N. and {Hartmann}, L.},
+    title = "{The Structure and Emission of Accretion Disks Irradiated by Infalling Envelopes}",
+  journal = {\apj},
+ keywords = {Accretion, Accretion Disks, Stars: Circumstellar Matter, Radiative Transfer, Stars: Individual: Constellation Name: HL Tauri, Stars: Pre-Main-Sequence},
+     year = 1997,
+    month = jan,
+   volume = 474,
+    pages = {397-406},
+      doi = {10.1086/303433},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1997ApJ...474..397D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -4404,6 +4530,25 @@ archivePrefix = "arXiv",
     pages = {477-505},
       doi = {10.1086/670826},
    adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..477D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{dent19,
+   author = {{Dent}, W.~R.~F. and {Pinte}, C. and {Cortes}, P.~C. and {M{\'e}nard}, F. and 
+	{Hales}, A. and {Fomalont}, E. and {de Gregorio-Monsalvo}, I.
+	},
+    title = "{Submillimetre dust polarization and opacity in the HD163296 protoplanetary ring system}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1809.09185},
+ primaryClass = "astro-ph.EP",
+ keywords = {submillimetre: planetary systems, physical data and processes: polarization},
+     year = 2019,
+    month = jan,
+   volume = 482,
+    pages = {L29-L33},
+      doi = {10.1093/mnrasl/sly181},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.482L..29D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -5154,6 +5299,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{dutrey17,
+   author = {{Dutrey}, A. and {Guilloteau}, S. and {Pi{\'e}tu}, V. and {Chapillon}, E. and 
+	{Wakelam}, V. and {Di Folco}, E. and {Stoecklin}, T. and {Denis-Alpizar}, O. and 
+	{Gorti}, U. and {Teague}, R. and {Henning}, T. and {Semenov}, D. and 
+	{Grosso}, N.},
+    title = "{The Flying Saucer: Tomography of the thermal and density gas structure of an edge-on protoplanetary disk}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1706.02608},
+ primaryClass = "astro-ph.SR",
+ keywords = {circumstellar matter, protoplanetary disks, radio lines: stars},
+     year = 2017,
+    month = nov,
+   volume = 607,
+      eid = {A130},
+    pages = {A130},
+      doi = {10.1051/0004-6361/201730645},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017A%26A...607A.130D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{duvert00,
    author = {{Duvert}, G. and {Guilloteau}, S. and {M{\'e}nard}, F. and {Simon}, M. and 
 	{Dutrey}, A.},
@@ -5704,6 +5870,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{fedele16,
+   author = {{Fedele}, D. and {van Dishoeck}, E.~F. and {Kama}, M. and {Bruderer}, S. and 
+	{Hogerheijde}, M.~R.},
+    title = "{Probing the 2D temperature structure of protoplanetary disks with Herschel observations of high-J CO lines}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1604.02055},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: pre-main sequence, stars: variables: T Tauri, Herbig Ae/Be, protoplanetary disks},
+     year = 2016,
+    month = jun,
+   volume = 591,
+      eid = {A95},
+    pages = {A95},
+      doi = {10.1051/0004-6361/201526948},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016A%26A...591A..95F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{fedele17,
    author = {{Fedele}, D. and {Carney}, M. and {Hogerheijde}, M.~R. and {Walsh}, C. and 
 	{Miotello}, A. and {Klaassen}, P. and {Bruderer}, S. and {Henning}, T. and 
@@ -5899,6 +6084,25 @@ archivePrefix = "arXiv",
     pages = {150},
       doi = {10.3847/1538-4357/aa79f9},
    adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...843..150F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{flaherty18,
+   author = {{Flaherty}, K.~M. and {Hughes}, A.~M. and {Teague}, R. and {Simon}, J.~B. and 
+	{Andrews}, S.~M. and {Wilner}, D.~J.},
+    title = "{Turbulence in the TW Hya Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1803.03842},
+ primaryClass = "astro-ph.EP",
+ keywords = {accretion, accretion disks, protoplanetary disks, stars: individual: TW Hya},
+     year = 2018,
+    month = apr,
+   volume = 856,
+      eid = {117},
+    pages = {117},
+      doi = {10.3847/1538-4357/aab615},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...856..117F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -6894,6 +7098,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{guedel18,
+   author = {{G{\"u}del}, M. and {Eibensteiner}, C. and {Dionatos}, O. and 
+	{Audard}, M. and {Forbrich}, J. and {Kraus}, S. and {Rab}, C. and 
+	{Schneider}, C. and {Skinner}, S. and {Vorobyov}, E.},
+    title = "{ALMA detects a radial disk wind in DG Tauri}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1810.12251},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: pre-main sequence, stars: winds, outflows, protoplanetary disks},
+     year = 2018,
+    month = nov,
+   volume = 620,
+      eid = {L1},
+    pages = {L1},
+      doi = {10.1051/0004-6361/201834271},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018A%26A...620L...1G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{guieu06,
    author = {{Guieu}, S. and {Dougados}, C. and {Monin}, J.-L. and {Magnier}, E. and 
 	{Mart{\'{\i}}n}, E.~L.},
@@ -7445,6 +7669,25 @@ archivePrefix = "arXiv",
     pages = {L71},
       doi = {10.1086/187119},
    adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...418L..71H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{heese17,
+   author = {{Heese}, S. and {Wolf}, S. and {Dutrey}, A. and {Guilloteau}, S.
+	},
+    title = "{Spread of the dust temperature distribution in circumstellar disks}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1705.01811},
+ primaryClass = "astro-ph.SR",
+ keywords = {radiative transfer, protoplanetary disks, methods: numerical, dust, extinction},
+     year = 2017,
+    month = jul,
+   volume = 604,
+      eid = {A5},
+    pages = {A5},
+      doi = {10.1051/0004-6361/201730501},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017A%26A...604A...5H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -8293,6 +8536,28 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{hull18,
+   author = {{Hull}, C.~L.~H. and {Yang}, H. and {Li}, Z.-Y. and {Kataoka}, A. and 
+	{Stephens}, I.~W. and {Andrews}, S. and {Bai}, X. and {Cleeves}, L.~I. and 
+	{Hughes}, A.~M. and {Looney}, L. and {P{\'e}rez}, L.~M. and 
+	{Wilner}, D.},
+    title = "{ALMA Observations of Polarization from Dust Scattering in the IM Lup Protoplanetary Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1804.06269},
+ primaryClass = "astro-ph.SR",
+ keywords = {polarization, protoplanetary disks, scattering, stars: formation, stars: protostars},
+     year = 2018,
+    month = jun,
+   volume = 860,
+      eid = {82},
+    pages = {82},
+      doi = {10.3847/1538-4357/aabfeb},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...860...82H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
 
@@ -9133,6 +9398,83 @@ archivePrefix = "arXiv",
     pages = {A42},
       doi = {10.1051/0004-6361/201323199},
    adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...568A..42K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kataoka15,
+   author = {{Kataoka}, A. and {Muto}, T. and {Momose}, M. and {Tsukagoshi}, T. and 
+	{Fukagawa}, M. and {Shibai}, H. and {Hanawa}, T. and {Murakawa}, K. and 
+	{Dullemond}, C.~P.},
+    title = "{Millimeter-wave Polarization of Protoplanetary Disks due to Dust Scattering}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1504.04812},
+ primaryClass = "astro-ph.EP",
+ keywords = {dust, extinction, polarization, protoplanetary disks},
+     year = 2015,
+    month = aug,
+   volume = 809,
+      eid = {78},
+    pages = {78},
+      doi = {10.1088/0004-637X/809/1/78},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...809...78K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kataoka16a,
+   author = {{Kataoka}, A. and {Tsukagoshi}, T. and {Momose}, M. and {Nagai}, H. and 
+	{Muto}, T. and {Dullemond}, C.~P. and {Pohl}, A. and {Fukagawa}, M. and 
+	{Shibai}, H. and {Hanawa}, T. and {Murakawa}, K.},
+    title = "{Submillimeter Polarization Observation of the Protoplanetary Disk around HD 142527}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1610.06318},
+ primaryClass = "astro-ph.EP",
+ keywords = {polarization, protoplanetary disks, stars: individual: HD 142527 },
+     year = 2016,
+    month = nov,
+   volume = 831,
+      eid = {L12},
+    pages = {L12},
+      doi = {10.3847/2041-8205/831/2/L12},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...831L..12K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kataoka16b,
+   author = {{Kataoka}, A. and {Muto}, T. and {Momose}, M. and {Tsukagoshi}, T. and 
+	{Dullemond}, C.~P.},
+    title = "{Grain Size Constraints on HL Tau with Polarization Signature}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1507.08902},
+ primaryClass = "astro-ph.EP",
+ keywords = {polarization, protoplanetary disks, scattering},
+     year = 2016,
+    month = mar,
+   volume = 820,
+      eid = {54},
+    pages = {54},
+      doi = {10.3847/0004-637X/820/1/54},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...820...54K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kataoka19,
+   author = {{Kataoka}, A. and {Okuzumi}, S. and {Tazaki}, R.},
+    title = "{Millimeter-wave Polarization Due to Grain Alignment by the Gas Flow in Protoplanetary Disks}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1903.03529},
+ primaryClass = "astro-ph.EP",
+ keywords = {polarization, protoplanetary disks, radio continuum: planetary systems },
+     year = 2019,
+    month = mar,
+   volume = 874,
+      eid = {L6},
+    pages = {L6},
+      doi = {10.3847/2041-8213/ab0c9a},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...874L...6K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -10171,6 +10513,24 @@ archivePrefix = "arXiv",
     pages = {135},
       doi = {10.1088/0004-637X/736/2/135},
    adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...736..135L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{lee17,
+   author = {{Lee}, C.-F. and {Li}, Z.-Y. and {Ho}, P.~T.~P. and {Hirano}, N. and 
+	{Zhang}, Q. and {Shang}, H.},
+    title = "{First detection of equatorial dark dust lane in a protostellar disk at submillimeter wavelength}",
+  journal = {Science Advances},
+archivePrefix = "arXiv",
+   eprint = {1704.08962},
+ keywords = {Star Formation, Accretion Disk},
+     year = 2017,
+    month = apr,
+   volume = 3,
+      eid = {e1602935},
+    pages = {e1602935},
+      doi = {10.1126/sciadv.1602935},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017SciA....3E2935L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -11444,6 +11804,23 @@ archivePrefix = "arXiv",
   interfaces and operating systems.},
   publisher = {IEEE COMPUTER SOC},
   year      = 2007
+}
+
+@ARTICLE{matsakos16,
+   author = {{Matsakos}, T. and {Tzeferacos}, P. and {K{\"o}nigl}, A.},
+    title = "{A wind-driving disc model for the mm-wavelength polarization structure of HL Tau}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1608.06960},
+ primaryClass = "astro-ph.SR",
+ keywords = {magnetic fields, polarization, protoplanetary discs, stars: individual: HL Tau, ISM: jets and outflows, submillimetre: planetary systems},
+     year = 2016,
+    month = dec,
+   volume = 463,
+    pages = {2716-2724},
+      doi = {10.1093/mnras/stw2175},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.463.2716M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{matsuyama03,
@@ -13036,6 +13413,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{ohashi18,
+   author = {{Ohashi}, S. and {Kataoka}, A. and {Nagai}, H. and {Momose}, M. and 
+	{Muto}, T. and {Hanawa}, T. and {Fukagawa}, M. and {Tsukagoshi}, T. and 
+	{Murakawa}, K. and {Shibai}, H.},
+    title = "{Two Different Grain Size Distributions within the Protoplanetary Disk around HD 142527 Revealed by ALMA Polarization Observation}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1807.10776},
+ primaryClass = "astro-ph.EP",
+ keywords = {polarization, protoplanetary disks, stars: individual: HD 142527 },
+     year = 2018,
+    month = sep,
+   volume = 864,
+      eid = {81},
+    pages = {81},
+      doi = {10.3847/1538-4357/aad632},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...864...81O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{okuzumi09,
    author = {{Okuzumi}, S.},
     title = "{Electric Charging of Dust Aggregates and its Effect on Dust Coagulation in Protoplanetary Disks}",
@@ -13417,6 +13814,24 @@ archivePrefix = "arXiv",
     pages = {973-988},
       doi = {10.1111/j.1365-2966.2008.13080.x},
    adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.386..973P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{paardekooper10,
+   author = {{Paardekooper}, S.-J. and {Baruteau}, C. and {Crida}, A. and 
+	{Kley}, W.},
+    title = "{A torque formula for non-isothermal type I planetary migration - I. Unsaturated horseshoe drag}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0909.4552},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: formation, planetary systems: formation},
+     year = 2010,
+    month = jan,
+   volume = 401,
+    pages = {1950-1964},
+      doi = {10.1111/j.1365-2966.2009.15782.x},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.401.1950P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -14175,6 +14590,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{pinte18b,
+   author = {{Pinte}, C. and {Price}, D.~J. and {M{\'e}nard}, F. and {Duch{\^e}ne}, G. and 
+	{Dent}, W.~R.~F. and {Hill}, T. and {de Gregorio-Monsalvo}, I. and 
+	{Hales}, A. and {Mentiplay}, D.},
+    title = "{Kinematic Evidence for an Embedded Protoplanet in a Circumstellar Disk}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1805.10293},
+ primaryClass = "astro-ph.SR",
+ keywords = {protoplanetary disks, radiative transfer, stars: formation, stars: individual: HD 163296, submillimeter: planetary systems, techniques: interferometric},
+     year = 2018,
+    month = jun,
+   volume = 860,
+      eid = {L13},
+    pages = {L13},
+      doi = {10.3847/2041-8213/aac6dc},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...860L..13P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{pollack94,
    author = {{Pollack}, J.~B. and {Hollenbach}, D. and {Beckwith}, S. and 
 	{Simonelli}, D.~P. and {Roush}, T. and {Fong}, W.},
@@ -14269,6 +14704,39 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{powell17,
+   author = {{Powell}, D. and {Murray-Clay}, R. and {Schlichting}, H.~E.},
+    title = "{Using Ice and Dust Lines to Constrain the Surface Densities of Protoplanetary Disks}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1704.04693},
+ primaryClass = "astro-ph.EP",
+ keywords = {astrochemistry, circumstellar matter, molecular processes, protoplanetary disks},
+     year = 2017,
+    month = may,
+   volume = 840,
+      eid = {93},
+    pages = {93},
+      doi = {10.3847/1538-4357/aa6d7c},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...840...93P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{powell19,
+   author = {{Powell}, D. and {Murray-Clay}, R. and {P{\'e}rez}, L.~M. and 
+	{Schlichting}, H.~E. and {Rosenthal}, M.},
+    title = "{New Constraints From Dust Lines On The Surface Densities Of Protoplanetary Disks}",
+  journal = {arXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1905.03252},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+     year = 2019,
+    month = may,
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190503252P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{prato02,
    author = {{Prato}, L. and {Simon}, M. and {Mazeh}, T. and {Zucker}, S. and 
 	{McLean}, I.~S.},
@@ -14324,6 +14792,20 @@ archivePrefix = "arXiv",
     pages = {486-510},
       doi = {10.1088/0067-0049/185/2/486},
    adsurl = {http://adsabs.harvard.edu/abs/2009ApJS..185..486P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{pudritz83,
+   author = {{Pudritz}, R.~E. and {Norman}, C.~A.},
+    title = "{Centrifugally driven winds from contracting molecular disks}",
+  journal = {\apj},
+ keywords = {Early Stars, Interstellar Gas, Magnetohydrodynamic Flow, Molecular Clouds, Angular Momentum, Disks, Hydrodynamic Equations, Interstellar Magnetic Fields, Stellar Evolution},
+     year = 1983,
+    month = nov,
+   volume = 274,
+    pages = {677-697},
+      doi = {10.1086/161481},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1983ApJ...274..677P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -14521,6 +15003,24 @@ archivePrefix = "arXiv",
 
 
 %%% RRR
+
+@ARTICLE{rafikov16,
+   author = {{Rafikov}, R.~R.},
+    title = "{Protoplanetary Disk Heating and Evolution Driven by Spiral Density Waves}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1601.03009},
+ primaryClass = "astro-ph.EP",
+ keywords = {accretion, accretion disks, planets and satellites: formation, protoplanetary disks },
+     year = 2016,
+    month = nov,
+   volume = 831,
+      eid = {122},
+    pages = {122},
+      doi = {10.3847/0004-637X/831/2/122},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...831..122R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{rafikov17,
    author = {{Rafikov}, R.~R.},
@@ -15925,6 +16425,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{msimon17,
+   author = {{Simon}, M. and {Guilloteau}, S. and {Di Folco}, E. and {Dutrey}, A. and 
+	{Grosso}, N. and {Pi{\'e}tu}, V. and {Chapillon}, E. and {Prato}, L. and 
+	{Schaefer}, G.~H. and {Rice}, E. and {Boehler}, Y.},
+    title = "{Dynamical Masses of Low-mass Stars in the Taurus and Ophiuchus Star-forming Regions}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1706.03505},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: pre-main sequence, techniques: interferometric},
+     year = 2017,
+    month = aug,
+   volume = 844,
+      eid = {158},
+    pages = {158},
+      doi = {10.3847/1538-4357/aa78f1},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...844..158S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{simon13,
    author = {{Simon}, J.~B. and {Bai}, X.-N. and {Armitage}, P.~J. and {Stone}, J.~M. and 
 	{Beckwith}, K.},
@@ -16216,6 +16736,27 @@ archivePrefix = "arXiv",
     pages = {410-418},
       doi = {10.1086/374374},
    adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...589..410S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{stephens17,
+   author = {{Stephens}, I.~W. and {Yang}, H. and {Li}, Z.-Y. and {Looney}, L.~W. and 
+	{Kataoka}, A. and {Kwon}, W. and {Fern{\'a}ndez-L{\'o}pez}, M. and 
+	{Hull}, C.~L.~H. and {Hughes}, M. and {Segura-Cox}, D. and {Mundy}, L. and 
+	{Crutcher}, R. and {Rao}, R.},
+    title = "{ALMA Reveals Transition of Polarization Pattern with Wavelength in HL Tau{\rsquo}s Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1710.04670},
+ primaryClass = "astro-ph.SR",
+ keywords = {dust, extinction, polarization, protoplanetary disks, stars: formation, stars: protostars},
+     year = 2017,
+    month = dec,
+   volume = 851,
+      eid = {55},
+    pages = {55},
+      doi = {10.3847/1538-4357/aa998b},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...851...55S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16628,6 +17169,24 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{tazaki17,
+   author = {{Tazaki}, R. and {Lazarian}, A. and {Nomura}, H.},
+    title = "{Radiative Grain Alignment In Protoplanetary Disks: Implications for Polarimetric Observations}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1701.02063},
+ primaryClass = "astro-ph.EP",
+ keywords = {dust, extinction, polarization, protoplanetary disks, radiative transfer},
+     year = 2017,
+    month = apr,
+   volume = 839,
+      eid = {56},
+    pages = {56},
+      doi = {10.3847/1538-4357/839/1/56},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...839...56T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{tazzari16,
    author = {{Tazzari}, M. and {Testi}, L. and {Ercolano}, B. and {Natta}, A. and 
 	{Isella}, A. and {Chandler}, C.~J. and {P{\'e}rez}, L.~M. and 
@@ -16665,6 +17224,44 @@ archivePrefix = "arXiv",
      year = 2017,
     month = jul,
    adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170701499T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{teague18a,
+   author = {{Teague}, R. and {Bae}, J. and {Bergin}, E.~A. and {Birnstiel}, T. and 
+	{Foreman-Mackey}, D.},
+    title = "{A Kinematical Detection of Two Embedded Jupiter-mass Planets in HD 163296}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1805.10290},
+ primaryClass = "astro-ph.EP",
+ keywords = {hydrodynamics, planet{\ndash}disk interactions, protoplanetary disks, techniques: interferometric},
+     year = 2018,
+    month = jun,
+   volume = 860,
+      eid = {L12},
+    pages = {L12},
+      doi = {10.3847/2041-8213/aac6d7},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...860L..12T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{teague18b,
+   author = {{Teague}, R. and {Bae}, J. and {Birnstiel}, T. and {Bergin}, E.~A.
+	},
+    title = "{Evidence for a Vertical Dependence on the Pressure Structure in AS 209}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1810.04961},
+ primaryClass = "astro-ph.EP",
+ keywords = {circumstellar matter, ISM: kinematics and dynamics, planet-disk interactions, protoplanetary disks },
+     year = 2018,
+    month = dec,
+   volume = 868,
+      eid = {113},
+    pages = {113},
+      doi = {10.3847/1538-4357/aae836},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...868..113T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -17029,6 +17626,23 @@ archivePrefix = "arXiv",
     pages = {90},
       doi = {10.1088/0004-637X/783/2/90},
    adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...783...90T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{turner10,
+   author = {{Turner}, N.~J. and {Carballido}, A. and {Sano}, T.},
+    title = "{Dust Transport in Protostellar Disks Through Turbulence and Settling}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0911.1533},
+ primaryClass = "astro-ph.EP",
+ keywords = {circumstellar matter, instabilities, MHD, solar system: formation, stars: formation},
+     year = 2010,
+    month = jan,
+   volume = 708,
+    pages = {188-201},
+      doi = {10.1088/0004-637X/708/1/188},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...708..188T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -18236,6 +18850,23 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{woitke09,
+   author = {{Woitke}, P. and {Kamp}, I. and {Thi}, W.-F.},
+    title = "{Radiation thermo-chemical models of protoplanetary disks. I. Hydrostatic disk structure and inner rim}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0904.0334},
+ primaryClass = "astro-ph.EP",
+ keywords = {astrochemistry, radiative transfer, methods: numerical, stars: formation, stars: circumstellar matter},
+     year = 2009,
+    month = jul,
+   volume = 501,
+    pages = {383-406},
+      doi = {10.1051/0004-6361/200911821},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2009A%26A...501..383W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{woitke15,
    author = {{Woitke}, P. and {Riaz}, B. and {Duch{\^e}ne}, G. and {Pascucci}, I. and 
 	{Lyo}, A.-R. and {Dent}, W.~R.~F. and {Phillips}, N. and {Thi}, W.-F. and 
@@ -18383,6 +19014,42 @@ archivePrefix = "arXiv",
 
 % YYY
 
+@ARTICLE{yang17,
+   author = {{Yang}, H. and {Li}, Z.-Y. and {Looney}, L.~W. and {Girart}, J.~M. and 
+	{Stephens}, I.~W.},
+    title = "{Scattering-produced (sub)millimetre polarization in inclined discs: optical depth effects, near-far side asymmetry and dust settling}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1705.05432},
+ primaryClass = "astro-ph.SR",
+ keywords = {polarization, protoplanetary discs, circumstellar matter},
+     year = 2017,
+    month = nov,
+   volume = 472,
+    pages = {373-388},
+      doi = {10.1093/mnras/stx1951},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.472..373Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{yang19,
+   author = {{Yang}, H. and {Li}, Z.-Y. and {Stephens}, I.~W. and {Kataoka}, A. and 
+	{Looney}, L.},
+    title = "{Does HL Tau disc polarization in ALMA band 3 come from radiatively aligned grains?}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1811.11897},
+ primaryClass = "astro-ph.SR",
+ keywords = {polarization, protoplanetary discs},
+     year = 2019,
+    month = feb,
+   volume = 483,
+    pages = {2371-2381},
+      doi = {10.1093/mnras/sty3263},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.483.2371Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{yen15,
    author = {{Yen}, H.-W. and {Koch}, P.~M. and {Takakuwa}, S. and {Ho}, P.~T.~P. and 
 	{Ohashi}, N. and {Tang}, Y.-W.},
@@ -18401,6 +19068,26 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...799..193Y},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{yen16,
+   author = {{Yen}, H.-W. and {Liu}, H.~B. and {Gu}, P.-G. and {Hirano}, N. and 
+	{Lee}, C.-F. and {Puspitaningrum}, E. and {Takakuwa}, S.},
+    title = "{Gas Gaps in the Protoplanetary Disk around the Young Protostar HL Tau}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1603.01378},
+ primaryClass = "astro-ph.EP",
+ keywords = {ISM: individual objects: HL Tau, line: profiles, protoplanetary disks},
+     year = 2016,
+    month = apr,
+   volume = 820,
+      eid = {L25},
+    pages = {L25},
+      doi = {10.3847/2041-8205/820/2/L25},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...820L..25Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{youdin02,
    author = {{Youdin}, A.~N. and {Shu}, F.~H.},
